--- a/_config.yml
+++ b/_config.yml
@@ -29,13 +29,13 @@ sass:
 #google-analytics: UA-XXXXX-Y
 
 # Social Links
-#email:             hoganj4@gmail.com
-#google.plus:        +JohnHogan428
+email:             hoganj4@gmail.com
+google.plus:        +JohnHogan428
 twitter:            HeyItsJohnHogan
 #facebook:           username
 github:             jogan
-stackoverflow:     123456/username   from a "http://stackoverflow.com/users/123456/username" link
-#linkedin:          john-hogan-a4a8673b
+stackoverflow:     411224/izi-shadow-izi
+linkedin:          john-hogan-a4a8673b
 #xing:              username
 #instagram:          username
 #lastfm:            username
