--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ linkedin:          john-hogan-a4a8673b
 #keybase:           username
 #xmpp:              username@server.com
 #hackernews:        username
-behance:           username
+#behance:           username
 
 # Gems
 gems:
